<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leboys.currencyconverter.MainActivity">

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info1" />

    <TextView
        android:id="@+id/output"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="43dp"
        android:clickable="false"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/result"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="364dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="17dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/please_enter_the_input_amount_and_select_the_currency"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_view" />

    <Spinner
        android:id="@+id/inputSpinner"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/outputSpinner"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info2" />

    <TextView
        android:id="@+id/info_view"
        android:layout_width="274dp"
        android:layout_height="45dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="69dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/currency_converter"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="357dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/please_select_the_currency_for_you_want_to_convert_to"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSpinner" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="140dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputSpinner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="366dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/please_select_currency"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAmount" />

    <Button
        android:id="@+id/exchange_rates"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="134dp"
        android:text="Click Here to View Historic Rates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output" />

</androidx.constraintlayout.widget.ConstraintLayout>